+ Buttons + Basic calculation functions + Clear, Operation and display functions

--- a/calculator.html
+++ b/calculator.html
@@ -9,27 +9,32 @@
 <body>
 
 <div id="buttonContainer">
-    <button class="button" id="addButton">+</button>
-    <button class="button" id="subtractButton">-</button>
-    <button class="button" id="multiplyButton">*</button>
-    <button class="button" id="divideButton">%</button>
-    <button class="button" id="equalsButton">=</button>
-    <button class="button" id="buttonClear">Clr</button>
 
-    <button class="button" id="button0">0</button>
-    <button class="button" id="button1">1</button>
-    <button class="button" id="button2">2</button>
-    <button class="button" id="button3">3</button>
-    <button class="button" id="button4">4</button>
-    <button class="button" id="button5">5</button>
-    <button class="button" id="button6">6</button>
-    <button class="button" id="button7">7</button>
-    <button class="button" id="button8">8</button>
-    <button class="button" id="button9">9</button>
+    <button class="button" button-clear>CLEAR</button>
+    <button class="button" delete-button>DELETE</button>
 
-    
+    <button class="button" number-button>7</button>
+    <button class="button" number-button>8</button>
+    <button class="button" number-button>9</button>
+    <button class="button" operator-button>÷</button>
+
+    <button class="button" number-button>4</button>
+    <button class="button" number-button>5</button>
+    <button class="button" number-button>6</button>
+    <button class="button" operator-button>×</button>
+
+    <button class="button" number-button>1</button>
+    <button class="button" number-button>2</button>
+    <button class="button" number-button>3</button>
+    <button class="button" operator-button>−</button>
+
+    <button class="button" point-button>.</button>
+    <button class="button" number-button>0</button>
+    <button class="button" equals-button>=</button>
+    <button class="button" operator-button>+</button>
+
 <div id="outputScreenContainer">
-    <p class="outputScreen">1234567890</p>
+    <p id="outputScreen"></p>
 </div>
     <script src="script.js"></script>
 </body>
